[package]
name = "emoji-tag"
version = "1.1.0"
authors = ["Nguyen Hoang Nam <nguyenhoangnam.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
savefile = "0.7"
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.5.0", features = ["full"]}
